--- a/about.html
+++ b/about.html
@@ -21,6 +21,7 @@
     <!--Font Awesome-->
 </head>
 <body>
+    <div class="nav-wrapper">
     <nav>
         <div class="main-title">
             <h1>Jordan</h1>
@@ -41,7 +42,7 @@
         </div>
     </main>
     <footer>
-        <div class="footer-ver">alpha v1.2</div>
+        <div class="footer-ver">alpha v1.3</div>
         <div class="footer-links">
             <a href="htps://twitter.com/Jschlte" target="_blank"><i class="fab fa-twitter"></i></a>
             <a href="htps://github.com/Jschlte" target="_blank"><i class="fab fa-github"></i></a>
@@ -53,5 +54,6 @@
     <script src="src/JavaScript/navbar.js"></script>
     <script src="src/JavaScript/app.js"></script>
     <!--JavaScript-->
+    </div>
 </body>
 </html>
