--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <!--Font Awesome-->
 </head>
 <body>
+    <div class="nav-wrapper">
     <nav>
         <div class="main-title">
             <h1>Jordan</h1>
@@ -97,7 +98,7 @@
         </div>
     </main>
     <footer>
-        <div class="footer-ver">alpha v1.2</div>
+        <div class="footer-ver">alpha v1.3</div>
         <div class="footer-links">
             <a href="htps://twitter.com/Jschlte" target="_blank"><i class="fab fa-twitter"></i></a>
             <a href="htps://github.com/Jschlte" target="_blank"><i class="fab fa-github"></i></a>
@@ -105,9 +106,11 @@
         </div>
         <div class="footer-ver">© 2021, Jordan</div>
     </footer>
+</div>
     <!--JavaScript-->
     <script src="src/JavaScript/navbar.js"></script>
     <script src="src/JavaScript/app.js"></script>
     <!--JavaScript-->
+
 </body>
 </html>
