--- a/index.html
+++ b/index.html
@@ -111,6 +111,20 @@
             </div>
             <div class="projects-div">
                 <div class="projects-tag">
+                    <div class="appTag">App</div>
+                </div>
+                <a href="https://nbaplayerstattracker.netlify.app/" class="btn-view" target="_blank">
+                <div class="projects-img"><img src="Images/iap.png" alt="In-App Free" draggable="false"></div>
+                <div class="projects-text">
+                    <h2>NBA Player Stat Tracker</h2>
+                    <div class="projects-text-section" data-simplebar>
+                        <p>I made this website to practice pulling information from an API and making it look presentable to users. <span>HTML</span>, <span>SCSS</span> and <span>JavaScript</span>.</p>
+                    </div>
+                </div>
+            </a>
+            </div>
+            <div class="projects-div">
+                <div class="projects-tag">
                     <div class="gameTag">Game</div>
                 </div>
                 <a href="https://number-guesser-jordan.netlify.app/" class="btn-view" target="_blank">
@@ -249,20 +263,6 @@
                 </div>
             </a>
             </div>
-            <div class="projects-div">
-                <div class="projects-tag">
-                    <div class="webTag">Website</div>
-                </div>
-                <a href="https://inappfree.netlify.app/" class="btn-view" target="_blank">
-                <div class="projects-img"><img src="Images/iap.png" alt="In-App Free" draggable="false"></div>
-                <div class="projects-text">
-                    <h2>In-App Free</h2>
-                    <div class="projects-text-section" data-simplebar>
-                        <p>This website was my first real project, I was happy when I finished this because I thought it looked cool and was fully functional. <span>HTML</span>, <span>CSS</span> and <span>Bootstrap</span>.</p>
-                    </div>
-                </div>
-            </a>
-            </div>
         </div>
         </section>
     </main>
@@ -281,7 +281,7 @@
                 <a href="mailto:email.jordanschulte@gmail.com" target="_blank" data-tooltip="Email Me"><i class="fas fa-envelope"></i></a>
             </div>
         <p class="copyright">Copyright © 2022, Jordan.</p>
-        <p class="version"><a href="https://github.com/JSCHLTE/Jschlte.github.io" target="_blank">version 3.0.3</a></p>
+        <p class="version"><a href="https://github.com/JSCHLTE/Jschlte.github.io" target="_blank">version 3.0.4</a></p>
     </footer>
 </div>
     <script src="JavaScript/navbar.js"></script>
