--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <div class="nav-links">
                     <a href="#skills" class="nav-item">Skills</a>
                     <a href="#projects" class="nav-item">Projects</a>
+                    <a href="images/Jordan's_Resume.pdf" download class="nav-item" title="Download my Résumé (pdf)">Résumé</a>
                     <div class="navContent">
                         <a href="#socials" class="dropbtn nav-item">Social Media <i class="fas fa-chevron-down"></i></a>
                         <div class="dropdown-content">
@@ -93,7 +94,7 @@
             </div>
         </section>
         <section class="projects-wrapper" id="projects">
-            <h1 class="projects-title">Projects</h1>
+            <h1 class="projects-title">My Top Projects</h1>
         <div class="projects-container">
             <div class="projects-div">
                 <div class="projects-tag">
@@ -125,14 +126,28 @@
             </div>
             <div class="projects-div">
                 <div class="projects-tag">
-                    <div class="gameTag">Game</div>
+                    <div class="webTag">Website</div>
                 </div>
-                <a href="https://number-guesser-jordan.netlify.app/" class="btn-view" target="_blank">
-                <div class="projects-img"><img src="Images/ngg.png" alt="Jordan's Number Guesser Game." draggable="false"></div>
+                <a href="https://harmonious-cocada-f1db99.netlify.app/" class="btn-view" target="_blank">
+                <div class="projects-img"><img src="Images/mapsclone.png" alt="Google Maps Clone" draggable="false"></div>
                 <div class="projects-text">
-                    <h2>Number Guesser</h2>
+                    <h2>Google Maps Clone</h2>
                     <div class="projects-text-section" data-simplebar>
-                        <p>This was a game I had done for boces, but I decided to upgrade it. <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.</p>
+                        <p>Google Maps Clone using Mapbox.</p>
+                    </div>
+                </div>
+            </a>
+            </div>
+            <div class="projects-div">
+                <div class="projects-tag">
+                    <div class="appTag">App</div>
+                </div>
+                <a href="https://weather-app-jordan.netlify.app/" class="btn-view" target="_blank">
+                <div class="projects-img"><img src="Images/weather.png" alt="Weather App" draggable="false"></div>
+                <div class="projects-text">
+                    <h2>Weather App</h2>
+                    <div class="projects-text-section" data-simplebar>
+                        <p>Made this website to practice my pulling information from API's. This uses the OpenWeather API. <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.</p>
                     </div>
                 </div>
                 </a>
@@ -167,14 +182,14 @@
             </div>
             <div class="projects-div">
                 <div class="projects-tag">
-                    <div class="appTag">App</div>
+                    <div class="gameTag">Game</div>
                 </div>
-                <a href="https://weather-app-jordan.netlify.app/" class="btn-view" target="_blank">
-                <div class="projects-img"><img src="Images/weather.png" alt="Weather App" draggable="false"></div>
+                <a href="https://number-guesser-jordan.netlify.app/" class="btn-view" target="_blank">
+                <div class="projects-img"><img src="Images/ngg.png" alt="Jordan's Number Guesser Game." draggable="false"></div>
                 <div class="projects-text">
-                    <h2>Weather App</h2>
+                    <h2>Number Guesser</h2>
                     <div class="projects-text-section" data-simplebar>
-                        <p>Made this website to practice my pulling information from API's. This uses the OpenWeather API. <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.</p>
+                        <p>This was a game I had done for boces, but I decided to upgrade it. <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.</p>
                     </div>
                 </div>
                 </a>
@@ -197,20 +212,6 @@
                 <div class="projects-tag">
                     <div class="appTag">App</div>
                 </div>
-                <a href="https://tip-calculator-jordan.netlify.app/" class="btn-view" target="_blank">
-                <div class="projects-img"><img src="Images/tip.png" alt="Tip Calculator" draggable="false"></div>
-                <div class="projects-text">
-                    <h2>Tip Calculator</h2>
-                    <div class="projects-text-section" data-simplebar>
-                        <p>Made this website to help me out at the dinner table. <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.</p>
-                    </div>
-                </div>
-                </a>
-            </div>
-            <div class="projects-div">
-                <div class="projects-tag">
-                    <div class="appTag">App</div>
-                </div>
                 <a href="https://jordan-birthday-countdown.netlify.app/" class="btn-view" target="_blank">
                 <div class="projects-img"><img src="Images/countdown.png" alt="Countdown Timer" draggable="false"></div>
                 <div class="projects-text">
@@ -225,40 +226,12 @@
                 <div class="projects-tag">
                     <div class="webTag">Website</div>
                 </div>
-                <a href="https://radio2bz.com" class="btn-view" target="_blank">
-                <div class="projects-img"><img src="Images/radio2bz.png" alt="Radio2BZ" draggable="false"></div>
-                <div class="projects-text">
-                    <h2>Radio2BZ</h2>
-                    <div class="projects-text-section" data-simplebar> 
-                        <p>I made this website for my grandfather. He started selling his items on ebay so I thought it would be a good idea to make him a website. Our website has gained much traction and it did pretty well, I am still constantly updating it everyday. <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.</p>
-                    </div>
-                </div>
-                </a>
-            </div>
-            <div class="projects-div">
-                <div class="projects-tag">
-                    <div class="webTag">Website</div>
-                </div>
                 <a href="https://competentcreators.netlify.app/" class="btn-view" target="_blank">
                 <div class="projects-img"><img src="Images/cc.png" alt="Competent Creators" draggable="false"></div>
                 <div class="projects-text">
                     <h2>Competent Creators</h2>
                     <div class="projects-text-section" data-simplebar>
                         <p>I built this website for a friend who made pretty cool gfx so I made him a website. This website was built with <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.</p>
-                    </div>
-                </div>
-            </a>
-            </div>
-            <div class="projects-div">
-                <div class="projects-tag">
-                    <div class="webTag">Website</div>
-                </div>
-                <a href="https://mcmacros.netlify.app/" class="btn-view" target="_blank">
-                <div class="projects-img"><img src="Images/macros.png" alt="MC Macros" draggable="false"></div>
-                <div class="projects-text">
-                    <h2>MC Macros</h2>
-                    <div class="projects-text-section" data-simplebar>
-                        <p>I made this website to release my C++ programs I built. I was testing the waters with C++ and made a couple programs. This website was built with <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.</p>
                     </div>
                 </div>
             </a>
@@ -281,7 +254,7 @@
                 <a href="mailto:email.jordanschulte@gmail.com" target="_blank" data-tooltip="Email Me"><i class="fas fa-envelope"></i></a>
             </div>
         <p class="copyright">Copyright © 2022, Jordan.</p>
-        <p class="version"><a href="https://github.com/JSCHLTE/Jschlte.github.io" target="_blank">version 3.0.4</a></p>
+        <p class="version"><a href="https://github.com/JSCHLTE/Jschlte.github.io" target="_blank">version 3.0.5</a></p>
     </footer>
 </div>
     <script src="JavaScript/navbar.js"></script>
